sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:2: error: Missing closing brace `}' assumed here
def cocktailSort3() {
^AlgCocktailSort3:12: error: Missing closing brace `}' assumed here
}
^