sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.code
def cocktailSort3() {

	var debut =0
	var fin = getNombreValeurs()-2
	for (i<- debut to fin) {
		if (plusPetit(i+1,i)){
			echange(i,i+1)
			x=true
			else
			return
}
